kubernetes-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-myapp
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.10.0
  name: nginx
  namespace: backend
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: backend
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: nginx
  tls: # Configuration for HTTPS
    - hosts:
      - api.cobasaja.biz.id
      secretName: tls-api-cobasaja # Name of the TLS secret object
  rules:
  - host: api.cobasaja.biz.id  # Replace with your domain or IP
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-myapp
            port:
              number: 8080
